Astroporfolio/deploy/infra/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "public"
    # Cambiado a true para que GitHub no tenga problemas de seguridad
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Anotaciones necesarias para que el Webhook de GitHub no sea bloqueado por Jenkins
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - jenkins.jorgedesarrollador.com
    # Este secreto debe existir en el namespace 'jenkins'
    secretName: jenkins-tls-prod
  rules:
  - host: jenkins.jorgedesarrollador.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
